--- a/DDeutschioHome/index.html
+++ b/DDeutschioHome/index.html
@@ -15,7 +15,7 @@
 <br>
 
 <div class="top-sections">
-    <a href="A1/index.html" class="section-btn">A1 Level</a>
+    <a href="A1/indexA1.html" class="section-btn">A1 Level</a>
     <br>
     <br>
     <a href="A2/indexA2.html" class="section-btn">A2 Level</a>
