Renaming DDeustchioHome.html to index.html and same with css

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>DDEUTSCHIO - Home</title>
-  <link rel="stylesheet" href="DDeutschioHome.css">
+  <link rel="stylesheet" href="index.css">
 </head>
 <body>
     <!-- Brand Name-->
