Changed quizzes in the index.html with german movies link

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
     <a href="https://germansuperfast.com/best-podcasts-to-learn-german/" class="section-btn">Podcasts</a>
     <br>
     <br>
-    <a href="" class="section-btn">Quizzes</a>
+    <a href="https://mydailygerman.com/german-movies/" class="section-btn">Movies</a>
 
   </div>
 <br>
