Quizzes has been added to the section of A1 - topic : Greetings

--- a/A1/numbers.html
+++ b/A1/numbers.html
@@ -9,16 +9,16 @@
 <body>
   <h1>A1 Numbers Vocabulary</h1>
   <div class="vocab-buttons">
-    <button class="vocab-btn">eins – one</button>
-    <button class="vocab-btn">zwei – two</button>
-    <button class="vocab-btn">drei – three</button>
-    <button class="vocab-btn">vier – four</button>
-    <button class="vocab-btn">fünf – five</button>
-    <button class="vocab-btn">sechs – six</button>
-    <button class="vocab-btn">sieben – seven</button>
-    <button class="vocab-btn">acht – eight</button>
-    <button class="vocab-btn">neun – nine</button>
-    <button class="vocab-btn">zehn – ten</button>
+    <button class="vocab-btn">eins – 1</button>
+    <button class="vocab-btn">zwei – 2</button>
+    <button class="vocab-btn">drei – 3</button>
+    <button class="vocab-btn">vier – 4</button>
+    <button class="vocab-btn">fünf – 5</button>
+    <button class="vocab-btn">sechs – 6</button>
+    <button class="vocab-btn">sieben – 7</button>
+    <button class="vocab-btn">acht – 8</button>
+    <button class="vocab-btn">neun – 9</button>
+    <button class="vocab-btn">zehn – 10</button>
   </div>
 
   <h3>A1 Numbers Sentences</h3>
