--- a/A1/greetings.html
+++ b/A1/greetings.html
@@ -55,5 +55,17 @@
       <br><span>Nice to see you!</span></div>
 
   </div>
+
+  <h2 class="quiz-title">Test Your Knowledge</h2>
+  <div id="quiz-container">
+    <div id="quiz-question"></div>
+    <div id="quiz-options"></div>
+    <button id="next-btn">Next</button>
+    <div id="quiz-result"></div>
+  </div>
+
+  <script src="greetingsQuiz.js"></script>
+</body>
+</html>
 </body>
 </html>
