Adding quizzes on DDeutschio.. A1 quizzes created

--- a/A2/indexA2.html
+++ b/A2/indexA2.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <title>A2 - DDeutschio</title>
   <link rel="stylesheet" href="stylesA2.css">
+  <link rel="stylesheet" href="hobbiesA2.css">
 </head>
 <body>
   <header class="hero-a2">
@@ -23,7 +24,9 @@
     <button class="quiz-btn" onclick="location.href='hobbiesA2.html'"> Hobbies</button>
   </div>
 
-  
+
+
+
 </body>
 
 </html>
