adding quizzes for all the sections, we done with quizzes.

--- a/B1/healthB1.html
+++ b/B1/healthB1.html
@@ -10,8 +10,8 @@
 <body>
   <h1> B1 Health Vocabulary</h1>
   <div class="vocab-buttons">
-    <button class="vocab-btn"> die Untersuchung - medical examination / check-up</button>
-    <button class="vocab-btn">die Behandlung - treatment</button>
+    <button class="vocab-btn"> die ärztliche Untersuchung - medical examination</button>
+    <button class="vocab-btn"> die Untersuchungndlung - treatment</button>
     <button class="vocab-btn">das Rezept - prescription</button>
     <button class="vocab-btn">die Tablette - tablet / pill</button>
     <button class="vocab-btn">das Medikament - medicine / drug</button>
