--- a/A1/index.html
+++ b/A1/index.html
@@ -2,13 +2,13 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>A1 - DDeutschio</title>
+  <title>A1 - Deutschio</title>
   <link rel="stylesheet" href="global.css">
   <link rel="stylesheet" href="days.css">
 </head>
 <body>
   <header class="hero-a1">
-    <h1 class="main-title">DDeutschio</h1>
+    <h1 class="main-title">Deutschio</h1>
     <p class="main-desc"> A1 → Select a topic to start learning. </p>
   </header>
 
