--- a/B1/indexB1.html
+++ b/B1/indexB1.html
@@ -2,14 +2,14 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>B1 - DDeutschio</title>
+  <title>B1 - Deutschio</title>
   <link rel="stylesheet" href="stylesB1.css">
   <link rel="stylesheet" href="healthB1.css">
 
 </head>
 <body>
   <header class="hero-a2">
-    <h1 class="main-title">DDeutschio </h1>
+    <h1 class="main-title">Deutschio </h1>
     <p class="main-desc"> B1 → Select a topic to start learning. </p>
   </header>
 
