--- a/B2/indexB2.html
+++ b/B2/indexB2.html
@@ -2,14 +2,14 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>B2 - DDeutschio</title>
+  <title>B2 - Deutschio</title>
   <link rel="stylesheet" href="stylesB2.css">
   <link rel="stylesheet" href="LawB2.css">
 
 </head>
 <body>
   <header class="hero-b2">
-    <h1 class="main-title">DDeutschio</h1>
+    <h1 class="main-title">Deutschio</h1>
     <p class="main-desc"> B2 → Select a topic to start learning. </p>
   </header>
 
