--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>DDEUTSCHIO - Home</title>
+  <title>DEUTSCHIO - Home</title>
   <link rel="stylesheet" href="index.css">
 </head>
 <body>
@@ -40,7 +40,11 @@
 
 
     <!-- Brand Name-->
-  <h1>DDEUTSCHIO</h1>
+  <!-- <h1>DDEUTSCHIO</h1> -->
+   <div class="brand-header">
+  <h1>DEUTSCHIO</h1>
+  <img src="Deutschio-logo.jpg" alt="DDeutschio Logo" class="brand-logo">
+</div>
 
 
 <br>
@@ -103,7 +107,7 @@
        <br>
        <br>
          <footer>   
-    <p>&copy; DDEUTSCHIO | All rights reserved.</p>
+    <p>&copy; DEUTSCHIO | All rights reserved.</p>
     <!-- <p>
       <a href="#">Privacy Policy</a> | 
       <a href="#">Terms of Service</a>
