--- a/login.html
+++ b/login.html
@@ -3,13 +3,13 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>Login — DDeutschio</title>
+  <title>Login — Deutschio</title>
   <link rel="stylesheet" href="index.css">
 </head>
 <body>
   <div class="login-page">
     <div class="login-card">
-      <h2 class="card-title">Welcome to DDeutschio</h2>
+      <h2 class="card-title">Welcome to Deutschio</h2>
 
       <!-- Step 1: enter username -->
       <div id="step-name" class="step">
