--- a/profile.html
+++ b/profile.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>Profile — DDeutschio</title>
+  <title>Profile — Deutschio</title>
   <link rel="stylesheet" href="index.css">
 </head>
 <body>
@@ -117,7 +117,7 @@
        <br>
        <br>
          <footer>   
-    <p>&copy; DDEUTSCHIO | All rights reserved.</p>
+    <p>&copy; DEUTSCHIO | All rights reserved.</p>
  
   </footer>
   <br>
