--- a/A2/indexA2.html
+++ b/A2/indexA2.html
@@ -2,13 +2,13 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>A2 - DDeutschio</title>
+  <title>A2 - Deutschio</title>
   <link rel="stylesheet" href="stylesA2.css">
   <link rel="stylesheet" href="hobbiesA2.css">
 </head>
 <body>
   <header class="hero-a2">
-    <h1 class="main-title">DDeutschio </h1>
+    <h1 class="main-title">Deutschio </h1>
     <p class="main-desc"> A2 → Select a topic to start learning. </p>
   </header>
   <div class="section-menu">
