I've added chatbot called Deutschio-AI. He can help us learn Deutsch.

--- a/profile.html
+++ b/profile.html
@@ -106,11 +106,18 @@
     </div>
   </div>
   <p id="gameMessage" class="game-message"></p>
+
+
+  
+
 </section>
 
 
 
        <br>
+     <a href="deutschio-chatbot.html" class="deutschio-btn" rel="noopener">
+    Use Deutschio-AI 
+   </a>
        <br>
        <br>
        <br>
